# GAMES101-Lab

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
Assignment0/: CMakeLists.txt  CMakeSettings.json  main.cpp  settings.json
Assignment1/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment1/代码框架/: main.cpp
Assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment2/代码框架/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment3/: CMakeLists.txt
Assignment3/Code/: CMakeLists.txt
Assignment3/Code/models/Crate/: Crate1.mtl
Assignment3/Code/models/cube/: cube.mtl  wall.tif  wall1.tif
Assignment3/Code/models/rock/: rock.mtl
